# Veda-Ardha

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/searxng/: settings.yml
docs/: Veda  activate_dream_state.md
scripts/: dream_state.py
src/brain/: associative_memory.py  memory_manager.py  memory_manager.py.backup.v3.0  memory_triggers.py
src/cognition/: cognitive_graph.py  curiosity_system.py  emotion_manager.py  metacognition.py  question_formatter.py  question_queue.py  uncertainty_scorer.py
src/core/: api.py  openrouter_client.py  orchestrator.py  orchestrator.py.before_fix  orchestrator.py.step10_backup  orchestrator.py.step11_backup  orchestrator.py.step9_backup
src/eyes/: search_tool.py
src/optimization/: token_optimizer.py
src/persona/: veda_persona.py
src/projects/: access_control.py  context_manager.py  isolation.py  templates.py
src/sap/: dependency_rules.py  diagnostic_workflow.py  knowledge_service.py  landscape_analyzer.py  ontology.py  port_calculator.py  project_service.py  query_builder.py  validators.py
tests/: test_access_control.py  test_associations.py  test_associations_debug.py  test_context_manager.py  test_curiosity.py  test_dependency_rules.py  test_formatter.py  test_isolation.py  test_memory_integration.py  test_ontology.py  test_port_calculator.py  test_query_builder.py  test_queue.py  test_templates.py  test_triggers.py  test_uncertainty.py  test_validators.py
