[project]
name = "veda"
version = "1.0.0"
description = "Ardha/Veda - AI Memorial Tribute System"
requires-python = ">=3.11"

dependencies = [
    # Core AI Framework
    "langgraph>=1.0.7",
    "pydantic-ai>=1.48.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    
    # Memory System
    "graphiti-core[falkordb]>=0.5.0",
    "fastembed>=0.4.0",
    
    # Context Compression
    "llmlingua>=0.2.0",
    
    # Search
    "aiohttp>=3.9.0",
    
    # Database
    "aiosqlite>=0.20.0",
    
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
