[project]
name = "veda"
version = "3.0.0"
description = "Ardha/Veda - AI Memorial Tribute System with Cognitive Architecture"
requires-python = ">=3.11"
dependencies = [
    # Core AI Framework
    "langgraph>=1.0.7",
    "pydantic-ai>=1.48.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    
    # Memory System
    "graphiti-core[falkordb]>=0.5.0",
    "fastembed>=0.4.0",
    
    # Context Compression
    "llmlingua>=0.2.0",
    
    # Search
    "aiohttp>=3.9.0",
    
    # Database
    "aiosqlite>=0.20.0",
    
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    
    # === NEW: Veda 3.0 Cognitive Features ===
    
    # Emotional System (Redis for fast state persistence)
    "redis>=5.0.0",
    "hiredis>=2.3.0",  # C parser for Redis - 10x faster
    
    # Curiosity Engine (Uncertainty Quantification)
    "uqlm>=0.1.0",  # Uncertainty Quantification for Language Models
    
    # Enhanced Math/Scientific Computing
    "numpy>=1.26.0",
    "scipy>=1.11.0",  # For emotion decay functions
    
    # YAML Config (for cognitive_config.yml)
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pytest-cov>=4.1.0",  # Coverage reports
    "pytest-timeout>=2.2.0",  # Latency testing
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10  # Fail tests that take >10s
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]
